--- a/css/preview.css
+++ b/css/preview.css
@@ -38,7 +38,9 @@ h1 {
 
 
 .color {
-  padding: 1.5rem;
+  --padding: 1.5rem;
+  padding: var(--padding);
+  padding-left: 0;
 }
 
 .color p {
@@ -55,6 +57,10 @@ h1 {
   position: relative;
   transition: transform 0.2s;
   color: black;
+  background: rgba(255,255,255,0.5);
+  padding: 5px;
+  padding-left: var(--padding);
+  margin-bottom: 1rem;
 }
 
 .color button.zoop {
@@ -66,6 +72,7 @@ h1 {
   opacity: 0.8;
   font-weight: 600;
   margin-bottom: 1rem;
+  padding-left: var(--padding);
 }
 
 
